Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -39,13 +39,14 @@
 \maketitle
 
 \begin{abstract}
-Fuel moisture content (FMC) is a key feature of predicting wildfire rate of spread (ROS). Machine learning models of FMC are being used more in recent years, augmenting or replacing traditional physics-based approaches. Wildfire ROS has a highly nonlinear relationship with FMC, where small differences in dry fuels lead to large differences in ROS. In this study, custom loss functions that place more weight on dry fuels were examined with a variety of machine learning models of FMC. The models were evaluated with a spatiotemporal cross-validation procedure to examine whether the custom loss functions led to more accurate forecasts of ROS. Results show that the custom loss functions improved accuracy for ROS forecasts by a modest, but nonzero amount. Further research would be needed to establish whether the improvement in ROS forecasts leads to more accurate real-time wildfire simulations.
+Fuel moisture content (FMC) is a key feature\marginpar{feature of $=>$ input in} of predicting wildfire rate of spread (ROS). Machine learning models of FMC are being used more in recent years, augmenting or replacing traditional physics-based approaches. Wildfire ROS has a highly nonlinear relationship with FMC, where small differences in dry fuels lead to large differences in ROS. In this study, custom loss functions that place more weight on dry fuels were examined with a variety of machine learning models of FMC. The models were evaluated with a spatiotemporal cross-validation procedure to examine whether the custom loss functions led to more accurate forecasts of ROS. Results show that the custom loss functions improved accuracy for ROS forecasts by a modest, but nonzero amount. Further research would be needed to establish whether the improvement in ROS forecasts leads to more accurate real-time wildfire simulations.
 \end{abstract}
 
 % Abbreviations section
 \subsection*{Key Terms \& Abbreviations}
 \begin{itemize}
     \item \textbf{FMC:} Fuel Moisture Content, a ratio interpretable as a percentage.
+    \marginpar{(\%) define asratio of what}
     \item \textbf{ROS:} Rate of Spread, units of meters per second.
     \item \textbf{Response Variable:} the variable that is being modeled, or the output of the model.
     \item \textbf{Features:} data used to predict the response variable. Also known as predictors, covariates, etc.
