Update on Overleaf.

--- a/ref/fire.bib
+++ b/ref/fire.bib
@@ -33,21 +33,23 @@ call=" SD421 .P94 1996     auraria"
 
 
 
-@misc{who_wildfires,
-  author       = {{World Health Organization}},
+@misc{WHO-2024-WFS,
+  Author       = {WHO},
   title        = {Wildfires},
   howpublished = {\url{https://www.who.int/health-topics/wildfires}},
-  note         = {Accessed: July 3, 2024}
+  note         = {Accessed: July 3, 2024},
+  year         = {2024},
+  organization = {World Health Organization}
 }
 
-@misc{usgs_wildfires,
+@misc{USGS-2024-WQA,
   author       = {{United States Geological Survey}},
   title        = {Water Quality After Wildfire},
   howpublished = {\url{https://www.usgs.gov/mission-areas/water-resources/science/water-quality-after-wildfire#overview}},
   note         = {Accessed: July 3, 2024}
 }
 
-@misc{jec_wildfires,
+@misc{JEC-2023-CEW,
   author       = {{Joint Economic Committee Democrats}},
   year = {2023},
   month = {10},
@@ -57,7 +59,7 @@ to $893 billion each year in economic costs and damages},
   note         = {Accessed: July 3, 2024}
 }
 
-@incollection{ipcc,
+@incollection{IPCC-2021-LCI,
   author       = {Gulev, {Intergovernmental Panel on Climate Change}},
   title        = {Land-Climate Interactions},
   booktitle    = {IPCC Sixth Assessment Report},
@@ -86,8 +88,9 @@ to $893 billion each year in economic costs and damages},
   issn = {2397-3722},
 }
 
-@misc{co_dfpc,
-  author       = {Colorado Division of Fire Prevention \& Control},
+@misc{CDFPC-2024-HWI,
+  author       = {CDFPC},
+  organization       = {Colorado Division of Fire Prevention \& Control},
   year = {2024},
   title        = {Historical Wildfire Information},
   howpublished = {\url{https://dfpc.colorado.gov/sections/wildfire-information-center/historical-wildfire-information}},
@@ -95,7 +98,8 @@ to $893 billion each year in economic costs and damages},
 }
 
 @misc{WFCA-2023-CFS,
-  author       = {Western Fire Chiefs Association},
+  author = {WFCA},
+  organization       = {Western Fire Chiefs Association},
   year = {2023},
   month = {6},
   day = {6},
@@ -105,8 +109,8 @@ to $893 billion each year in economic costs and damages},
 }
 
 @misc{NCEI-2024-DFM,
-  author       = {National Centers for Environmental Information},
-  institution = {NOAA},
+  author       = {NCEI},
+  institution = {National Centers for Environmental Information - NOAA},
   year = {2024},
   month = {6},
   day = {10},
@@ -116,7 +120,7 @@ to $893 billion each year in economic costs and damages},
 }
 
 @techreport{NWCG-FireWeather,
-  author       = {{National Wildfire Coordinating Group}},
+  author       = {NWCG},
   title        = {Fire Weather, {PMS} 425-1},
   institution  = {National Wildfire Coordinating Group},
   year         = {2021},
@@ -127,60 +131,60 @@ to $893 billion each year in economic costs and damages},
   urldate      = {2024-07-03}
 }
 
-@misc{NIFC,
-  author       = {National Interagency Fire Center},
-  institution = {NIFC},
+@misc{NIFC-2024-RAW,
+  author       = {NIFC},
+  institution = {National Interagency Fire Center},
   title        = {Remote Automatic Weather Stations (RAWS)},
   howpublished = {\url{https://www.nifc.gov/about-us/what-is-nifc/remote-automatic-weather-stations}},
   note         = {Accessed: July 3, 2024}
 }
 
-@misc{NIFC-Fuels,
-  author       = {National Interagency Fire Center},
-  institution = {NIFC},
+@misc{NIFC-2024-FAF,
+  author       = {NIFC},
+  institution = {National Interagency Fire Center},
   title        = {Fire and Fuels},
   howpublished = {\url{https://gacc.nifc.gov/rmcc/predictive/Fire%20Behavior%20Fuel%20Model%20Descriptions.pdf}},
   note         = {Accessed: July 3, 2024}
 }
 
-@misc{NFSC,
-  author       = {Northwest Fire Science Consortium},
-  institution = {NFSC},
+@misc{NFSC-2024-MFB,
+  author       = {NFSC},
+  institution = {Northwest Fire Science Consortium},
   title        = {Measures of Fire Behavior},
   howpublished = {\url{https://nwfirescience.org/sites/default/files/publications/FIREFACTS_Measures%20of%20fire%20behavior%20FINAL.pdf}},
   note         = {Accessed: July 3, 2024}
 }
 
-@misc{openwfm_fuels,
-  author       = {Open Wildland Fire Modeling eCommunity},
-  institution = {OpenWFM},
+@misc{OpenWFM-2024-HTD,
+  author       = {OpenWFM},
+  institution = {Open Wildland Fire Modeling eCommunity},
   title        = {How to diagnose fuel properties in WRF-SFIRE},
   howpublished = {\url{https://wiki.openwfm.org/wiki/How_to_diagnose_fuel_properties_in_WRF-SFIRE}},
   note         = {Accessed: July 3, 2024}
 }
 
-@misc{openwfm,
-  author       = {Open Wildland Fire Modeling eCommunity},
-  institution = {OpenWFM},
+@misc{OpenWFM-2024-WRF,
+  author       = {OpenWFM},
+  institution = {Open Wildland Fire Modeling eCommunity},
   title        = {WRF-SFIRE
 },
   howpublished = {\url{https://wiki.openwfm.org/wiki/WRF-SFIRE}},
   note         = {Accessed: July 3, 2024}
 }
 
-@misc{weathergov,
-  author       = {National Weather Service},
-  institution = {NOAA},
+@misc{NWS-2024-GFW,
+  author       = {NWS},
+  organization = {NOAA},
   title        = {Glossary of Fire Weather Terms},
   howpublished = {\url{https://www.weather.gov/phi/fire_glossary#:~:text=Moisture%20of%20extinction%20%2D%20The%20fuel,will%20not%20be%20sustained%20independently.}},
   note         = {Accessed: July 3, 2024}
 }
 
 
-@misc{NIFC-GACC,
-  author       = {Geographic Area Coordination Centers},
+@misc{NIFC-2024-GAC,
+  author       = {NIFC},
   institution = {NIFC},
-  title        = {About Us},
+  title        = {Geographic Area Coordination Centers - About Us},
   howpublished = {\url{https://gacc.nifc.gov/admin/about_us/about_us.htm}},
   note         = {Accessed: July 3, 2024}
 }
