--- a/ref/fmc.bib
+++ b/ref/fmc.bib
@@ -272,8 +272,8 @@ call="SD421 .F674 2001",
 isbn="978-0123866608"
 }
 
-@misc{cs_10h,
-  author       = {Campbell Scientific},
+@misc{Campbell-2017-RMM,
+  author       = {{Campbell Scientific}},
   title        = {Remote Measurements - Monitors forest-fire factor\; ideal for use with RAWS},
   year = {2017},
   month = {10},
@@ -292,8 +292,8 @@ isbn="978-0123866608"
 }
 
 
-@misc{Blaylock-2023-SP,
-  author       = {Blaylock, B. K.},
+@misc{Blaylock-2023-SPA,
+  author       = {Blaylock},
   title        = {SynopticPy: Synoptic API for Python},
   year         = {2023},
   version      = {2023.3.0},
@@ -301,16 +301,17 @@ isbn="978-0123866608"
   note         = {Computer software}
 }
 
-@misc{Synoptic,
+@misc{Synoptic-2024-SWA,
   author = {Synoptic},
   title        = {Synoptic Weather API},
   institution = {Synoptic},
-  howpublished = {\url{https://synopticdata.com/weatherapi}}
+  howpublished = {\url{https://synopticdata.com/weatherapi}},
+  note = {Computer software}
 }
 
 
-@manual{campbell,
-  author       = {{Campbell Scientific, Inc.}},
+@manual{Campbell-2012-RRA,
+  author       = {{Campbell Scientific}},
   title        = {{RAWS-P Remote Automated Weather Station}},
   year         = {2006--2012},
   organization = {Campbell Scientific, Inc.},
