--- a/ref/ml.bib
+++ b/ref/ml.bib
@@ -152,3 +152,26 @@ DOI = {10.3390/f12070933}
     }
 }
 
+@book{Hastie-2010-ESL,
+  added-at = {2010-06-03T15:15:09.000+0200},
+  author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  biburl = {https://www.bibsonomy.org/bibtex/200d858c0bd2826d4eb5f39450192d1f5/ukoethe},
+  edition = 2,
+  file = {:Books\\HastieTibshiraniFriedman-09-Elements-of-Statistical-Learning-2nd-edition\\hastie_09_elements-of.statistical-learning.pdf:PDF},
+  interhash = {52d1772f39be836e3b298d37b8c0cfa1},
+  intrahash = {00d858c0bd2826d4eb5f39450192d1f5},
+  keywords = {inference mathmatics dataanalysis method clutering statistics},
+  publisher = {Springer},
+  timestamp = {2010-06-03T15:15:09.000+0200},
+  title = {The elements of statistical learning: data mining, inference and prediction},
+  url = {http://www-stat.stanford.edu/~tibs/ElemStatLearn/},
+  year = 2009
+}
+
+@misc{XGBoost-2022-XGB,
+  author       = {{xgboost developers}},
+  title        = {XGBoost Documentation},
+  year         = {2022},
+  howpublished = {\url{https://xgboost.readthedocs.io/}},
+  note         = {Computer software}
+}
